FDP-1228: Self-implemented review comments
Signed-off-by: Sander Verbruggen <sander.verbruggen@alliander.com>